Refactored `Person` handling for native reflection and improved seed data maintainability
- Extracted `Person` record from `AllowedIdentitiesParser` to a standalone class and registered it for native image reflection to fix deserialization issues in production builds.
- Replaced hardcoded region tags in `SalaryPresetBootstrap` with descriptive names.
- Improved `AllowedIdentitiesParser` parsing logic for better reliability and readability.
- Introduced `quarkus.log.console.darken` property to resources for enhanced log readability.